k8s-services/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  api-deployment
  labels:
    app:  api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api-container
          image: localhost:32000/node_api:v1
          ports:
            - containerPort: 5000
