k8s-services/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-service
spec:
  type: ClusterIP
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 80
  selector:
    app: ui
