k8s-services/ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-ingress
  namespace: ui
spec:
  tls:
  - hosts:
    - react-ui.com
    secretName: my-tls-secret
  rules:
  - host: react-ui.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ui-service
            port:
              number: 8080
